@@ -7,12 +7,12 @@ RESULT_DIR="html"
 TESTSUITE_DEFAULT="basics.suite"
 # You can invoke this script with "env FUEGO_BUILD_ROOT=... run.sh" or it
 # will automatically detect the build root, if the build was done in the
-# Fuego root directory or in build/autotools/debug
+# Fuego root directory or in build/dbg
 if [[ "$FUEGO_BUILD_ROOT" == "" ]]; then
     if test -x ../fuegomain/fuego; then
         FUEGO_BUILD_ROOT=".."
-    elif test -x ../build/autotools/debug/fuegomain/fuego; then
-        FUEGO_BUILD_ROOT="../build/autotools/debug"
+    elif test -x ../build/dbg/fuegomain/fuego; then
+        FUEGO_BUILD_ROOT="../build/dbg"
     fi
 fi
 FUEGO="$FUEGO_BUILD_ROOT/fuegomain/fuego --nobook --srand 1"
