@@ -2,7 +2,7 @@
 
 # Script for playing the AverageLib simple player on 9x9 CGOS
 
-AVERAGELIB="../../build/autotools/release/fuegotest/fuego_test -player average -config config-average.gtp"
+AVERAGELIB="../../build/opt-9/fuegotest/fuego_test -player average -config config-average.gtp"
 NAME=AverageLib
 
 echo "Enter CGOS password for $NAME:"
